--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/jest": "^29.5.4",
     "abab": "^2.0.6",
     "acorn": "^8.10.0",
     "acorn-globals": "^7.0.1",
@@ -118,6 +119,7 @@
     "jest-each": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jest-get-type": "^29.6.3",
     "jest-haste-map": "^29.7.0",
     "jest-leak-detector": "^29.7.0",
